# Capstone-Project

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml
docs/: mkdocs.yml
docs/docs/: index.md
flask_app/: app.py
flask_app/templates/: index.html
notebooks/: data.csv  exp1.ipynb  exp2_bow_vs_tfidf.py  exp3_lor_bow_hp.py
scripts/: promote_model.py
src/model/: model_evaluation.py  register_model.py
tests/: test_flask_app.py  test_model.py
