[project]
name = "capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
    "dagshub>=0.6.4",
    "mlflow>=3.8.1",
    "nltk>=3.9.2",
    "setuptools>=80.9.0",
    "xgboost>=3.1.3",
]
